# gate_os_legacy

./: .env  .gitignore  Cargo.toml  GNUmakefile  Makefile.toml  build.rs  cat.qoi  deny.toml  flake.nix  limine.cfg  readme.md  todo.md
.cargo/: config.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
hal-core/: Cargo.toml
hal-x86_64/: Cargo.toml
hal-x86_64/src/: framebuffer.rs  lib.rs
kernel/: .gitignore  Cargo.toml  GNUmakefile  Makefile.toml  build.rs  dskprint  rust-toolchain.toml
kernel/.cargo/: config.toml
kernel/src/: acpi.rs  allocator.rs  arch.rs  debug.rs  framebuffer.rs  gdt.rs  interrupts.rs  lib.rs  logger.rs  main.rs  memory.rs  pci.rs  serial.rs
kernel/src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
kernel/src/api/: allocator.rs  clock.rs  console.rs  font.rs  fs.rs  mod.rs  process.rs  prompt.rs  syscall.rs  time.rs  unit.rs
kernel/src/api/vga/: color.rs  mod.rs  palette.rs
kernel/src/arch/: x86_64.rs
kernel/src/arch/x86_64/: framebuffer.rs  mod.rs
kernel/src/interrupts/: exception_handlers.rs  interrupt_handlers.rs  io_apic.rs  local_apic.rs
kernel/src/sys/: acpi.rs  allocator.rs  apic.rs  ata.rs  clock.rs  console.rs  cpu.rs  framebuffer.rs  gdt.rs  idt.rs  interrupts.rs  keyboard.rs  logger.rs  mem.rs  mod.rs  pci.rs  process.rs  serial.rs  time.rs
kernel/src/sys/allocator/: fixed_size_block.rs  linked_list.rs
kernel/src/sys/apic/: interrupt_handlers.rs  io_apic.rs  local_apic.rs
kernel/src/sys/arch/: mod.rs
kernel/src/sys/arch/x86_64/: acpi.rs  cmos.rs  exception_handlers.rs  gdt.rs  idt.rs  mod.rs  time.rs
kernel/src/sys/arch/x86_64/apic/: io_apic.rs  local_apic.rs  mod.rs
kernel/src/sys/drivers/: ata.rs  keyboard.rs  mod.rs  serial.rs
kernel/src/sys/fs/: block.rs  block_device.rs  device.rs  dir.rs  file.rs  mod.rs  super_block.rs
kernel/src/sys/interrupts/: exception_handlers.rs  interrupt_handlers.rs  io_apic.rs  local_apic.rs
kernel/src/sys/syscall/: mod.rs  service.rs
kernel/src/sys/task/: executor.rs  keyboard.rs  mod.rs  mouse.rs
kernel/src/task/: executor.rs  keyboard.rs  mod.rs  mouse.rs  simple_executor.rs
kernel/src/usr/: disk.rs  elf.rs  hex.rs  install.rs  list.rs  mod.rs  read.rs  shell.rs
(+46 files in other folders)
