[package]
name = "os"
version = "0.1.0"

[build-dependencies]
bootloader = "0.11.4"
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }

[dependencies]
# used for UEFI booting in QEMU
ovmf-prebuilt = "0.1.0-alpha.1"

[workspace]
resolver = "2"
members = ["kernel"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"