[package]
name = "hal-x86_64"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["alloc"]
alloc = []

[dependencies]
hal-core = { path = "../hal-core" }
volatile = { version = "0.4.6", features = ["unstable"] }